--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,25 +14,19 @@
         <header>
             {% if page.home %}<h1>intranation</h1>{% else %}<a href="/" rel="home">intranation</a>{% endif %}
         </header>
-        <div id="content">
+        <section id="content">
             {{ content }}
-        </div>
-        <div id="footer">
-            <div class="container">
-
-                <h2><a href="/about/" rel="me">About Me</a></h2>
-                <address class="vcard author">
-                    <a class="url" href="/">Intranation</a> is the personal website of <span class="fn"><span class="given-name">Bradley</span> <span class="family-name">Wright</span></span> (<span class="nickname">Brad</span> to most people), a professional <span class="title">web developer</span> living and working in <span class="adr"><span class="locality">London</span>, <span class="country-name">United Kingdom</span></span>.
-                </address>
-                <h3>Hosting</h3>
-                <p>
-                    <a href="http://prgmr.com/xen/">prgmr</a> are my current web hosts, as I’ve moved away from Slicehost.
-                </p>
-                <p>
-                    This site is hand–rolled and powered by <a href="http://www.djangoproject.com/">Django</a>.
-                </p>
-                <p class="copyright">Contents of site licenced under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Creative Commons Attribution-ShareAlike 2.0 England &amp; Wales Licence.</a>.</p>
-            </div>
-        </div>
+        </section>
+        <footer>
+            <h2><a href="/about/" rel="me">About Me</a></h2>
+            <address class="vcard author">
+                <a class="url" href="/">intranation</a> is the personal website of <span class="fn"><span class="given-name">Bradley</span> <span class="family-name">Wright</span></span> (<span class="nickname">Brad</span> to most people), a professional <span class="title">web developer</span> living and working in <span class="adr"><span class="locality">London</span>, <span class="country-name">United Kingdom</span></span>.
+            </address>
+            <h3>Hosting</h3>
+            <p>
+                This site hosted on <a href="http://www.linode.com/?r=21cd4891db572694c88e17511f6346a8a5f8457d" rel="external" title="My Linode referral link">Linode</a>.
+            </p>
+            <p class="copyright">Contents of site licenced under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Creative Commons Attribution-ShareAlike 2.0 England &amp; Wales Licence.</a>.</p>
+        </footer>
     </body>
 </html>
