--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,7 +20,7 @@
         <footer>
             <h2><a href="/about/" rel="me">About Me</a></h2>
             <address class="vcard author">
-                <a class="url" href="/">intranation</a> is the personal website of <span class="fn"><span class="given-name">Bradley</span> <span class="family-name">Wright</span></span> (<span class="nickname">Brad</span> to most people), a professional <span class="title">web developer</span> living and working in <span class="adr"><span class="locality">London</span>, <span class="country-name">United Kingdom</span></span>.
+                <a class="url" href="/" rel="home">intranation</a> is the personal website of <span class="fn"><span class="given-name">Bradley</span> <span class="family-name">Wright</span></span> (<span class="nickname">Brad</span> to most people), a professional <span class="title">web developer</span> living and working in <span class="adr"><span class="locality">London</span>, <span class="country-name">United Kingdom</span></span>.
             </address>
             <h3>Hosting</h3>
             <p>
