--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{% if page.title %}{{ page.title }}{% else %}sdgsdg{% endif %}</title>
+        <title>{% if page.title %}{{ page.title }}{% else %}Brad Wright{% endif %} - intranation.com</title>
         <link href="/feed.atom" rel="alternate" title="Recent Blog Posts" type="application/atom+xml">
         <link rel="stylesheet" type="text/css" href="/static/css/main.css">
         <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/2.0/uk/" type="text/html" title="Creative Commons Attribution-ShareAlike 2.0 England &amp; Wales Licence">
