Fix hosting line

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
             </address>
             <h3>Hosting</h3>
             <p>
-                This site hosted on <a href="http://www.linode.com/?r=21cd4891db572694c88e17511f6346a8a5f8457d" rel="external" title="My Linode referral link">Linode</a>.
+                This site hosted on <a href="http://prgmr.com/xen/" rel="external">prgmr</a>.
             </p>
             <p class="copyright">Contents of site licenced under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Creative Commons Attribution-ShareAlike 2.0 England &amp; Wales Licence.</a>.</p>
         </footer>
